Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/SMAX_PS_Install_Request__c.object-meta.xml
<CustomObject>
    <label>Install Request</label>
    <nameField>
        <label>Install Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Install Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>