Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_Account__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Install Requests</relationshipLabel>
    <relationshipName>Install_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>