Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_Account_ExtId__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Account_ExtId__c</fullName>
    <label>Account External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>