Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_Contact__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Number</description>
    <inlineHelpText>Contact Number</inlineHelpText>
    <label>Contact Number</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Install Requests</relationshipLabel>
    <relationshipName>Install_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>