Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ContactEmail__c</fullName>
    <description>Contact Email</description>
    <inlineHelpText>Contact Email</inlineHelpText>
    <label>Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>