Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_ContactName__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ContactName__c</fullName>
    <description>Contact Name</description>
    <inlineHelpText>Contact Name</inlineHelpText>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>