Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ContactPhone__c</fullName>
    <description>Contact Phone</description>
    <inlineHelpText>Contact Phone</inlineHelpText>
    <label>Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>