Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Error_Message__c</fullName>
    <description>Error message encountered when trying to generate Work Order.</description>
    <inlineHelpText>Error message encountered when trying to generate Work Order.</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>