Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_External_Id__c</fullName>
    <description>Unique External Id for this Install Request.  Should be populated with:
SalesOrderNumber-LineNumber-EquipmentNumber</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique External Id for this Install Request.  Should be populated with:
SalesOrderNumber-LineNumber-EquipmentNumber</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>