Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_InstallType__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_InstallType__c</fullName>
    <label>Install Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>INSTALLATION</fullName>
            </value>
            <value>
                <fullName>PHONE</fullName>
            </value>
            <value>
                <fullName>PIV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>