Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_Location__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Install Requests</relationshipLabel>
    <relationshipName>Install_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>