Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_ProductSeries__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ProductSeries__c</fullName>
    <description>Product Series</description>
    <inlineHelpText>Product Series</inlineHelpText>
    <label>Product Series</label>
    <length>30</length>
    <type>Text</type>
</CustomField>