Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_SalesOrderLineNumber__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_SalesOrderLineNumber__c</fullName>
    <description>Sales Order Line Number</description>
    <inlineHelpText>Sales Order Line Number</inlineHelpText>
    <label>Sales Order Line Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>