Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_SalesOrderLinesDescription__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_SalesOrderLinesDescription__c</fullName>
    <description>Sales Order Lines Description</description>
    <inlineHelpText>Sales Order Lines Description</inlineHelpText>
    <label>Sales Order Lines Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>