Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_SalesOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_SalesOrderNumber__c</fullName>
    <description>Sales Order Number</description>
    <inlineHelpText>Sales Order Number</inlineHelpText>
    <label>Sales Order Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>