Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_Status__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>