Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/fields/SMAX_PS_TechnicianAccount__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_TechnicianAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Technician Account</description>
    <inlineHelpText>Technician Account</inlineHelpText>
    <label>Technician Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Install Requests (Technician Account)</relationshipLabel>
    <relationshipName>Install_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>