Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_InstallType__c</columns>
    <columns>SMAX_PS_Status__c</columns>
    <columns>SMAX_PS_Account__c</columns>
    <columns>SMAX_PS_Product__c</columns>
    <columns>SMAX_PS_InstalledProduct__c</columns>
    <columns>SMAX_PS_WorkOrder__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SMAX_PS_Location_ExtId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>