Perkin-UAT/force-app/main/default/objects/SMAX_PS_Install_Request__c/listViews/Pending_Error_Install_Requests.listView-meta.xml
<ListView>
    <fullName>Pending_Error_Install_Requests</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_WorkOrder__c</columns>
    <columns>SMAX_PS_Account__c</columns>
    <columns>SMAX_PS_InstalledProduct__c</columns>
    <columns>SMAX_PS_Product__c</columns>
    <columns>SMAX_PS_Location__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SMAX_PS_SalesOrderNumber__c</columns>
    <columns>SMAX_PS_TechnicianAccount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SMAX_PS_WorkOrder__c</field>
        <operation>equals</operation>
    </filters>
    <label>Pending / Error Install Requests</label>
</ListView>